# DQBDD

./: .gitignore  BDDPair.cpp  BDDPair.hpp  BDDProcessor.cpp  BDDProcessor.hpp  CHANGELOG  CMakeLists.txt  Formula.cpp  Formula.hpp  HQSpreinterface.cpp  HQSpreinterface.hpp  Makefile  README.md  Solver.cpp  Solver.hpp  Variable.cpp  Variable.hpp  clause.hpp  formula.cpp  formula.hpp  main.cpp  quantifiedvariablesmanipulator.cpp  quantifiedvariablesmanipulator.hpp  quantifiertree.cpp  quantifiertree.hpp  runBenchmarks.sh  simplesolver.cpp  simplesolver.hpp  solver.cpp  solver.hpp  treesolver.cpp  treesolver.hpp  variable.cpp  variable.hpp
cmake/: FindGLPK.cmake  FindLTDL.cmake
libs/: CMakeLists.txt
libs/antom/: CMakeLists.txt
libs/antom/Core/: allocator.h  control.h  core.h  reason.h
libs/antom/prepro/: bce.cpp  bce.h  bva.h  hte.cpp  hte.h  modelrebuilder.cpp
libs/antom/solver/: antom.cpp  antombase.h  cascade.h  circuit.cpp  debug.cpp  lifting.cpp  main_inc.cpp  solverproxy.cpp  sorter.h  timevariables.h
libs/cudd-3.0.0/: CMakeLists.txt
libs/cudd-3.0.0/cplusplus/: cuddObj.cc  cuddObj.hh
libs/cudd-3.0.0/cudd/: cuddAPI.c  cuddUtil.c
libs/cxxopts/: CMakeLists.txt
libs/easylogging/: easylogging++.cpp
libs/hqspre/: .clang-format  CHANGES  CMakeLists.txt  Doxyfile.in  README  aux.hpp  auxil.hpp  bool_vector.cpp  bool_vector.hpp  bool_vector.ipp  changesfordqbdd  clause.cpp  clause.hpp  clause.ipp  exceptions.hpp  formula.cpp  formula.hpp  formula.ipp  formula_blocked_et_al.cpp  formula_blocked_et_al.ipp  formula_debug.cpp  formula_dep_elim.cpp  formula_dep_schemes.cpp  formula_elim_set.cpp  formula_equiv_contra.cpp  formula_experimental.cpp  formula_findHidden.cpp  formula_forkExt.cpp  formula_gate_interface.cpp  formula_gates.cpp  formula_inout.cpp  formula_resolution.cpp  formula_sat.cpp  formula_substitute.cpp  formula_subsumption.cpp  formula_subsumption.ipp  formula_unit_pure.cpp  formula_univ_expand.cpp  formula_univ_red.cpp  formula_upla.cpp  (+20 more)
libs/hqspre-1.4/: CHANGES  CMakeLists.txt  Doxyfile.in
libs/hqspre-1.4/libs/antom/: CMakeLists.txt
libs/hqspre-1.4/libs/antom/Core/: boundedQueue.h  clause.h  helper.h  solverstate.cpp  statistics.h  varheap.h  watcher.h
libs/hqspre-1.4/libs/antom/prepro/: bva.cpp  modelrebuilder.h  preprocessor.cpp  preprocessor.h  upla.cpp  upla.h  varcandidate.h
libs/hqspre-1.4/libs/antom/solver/: antom.cpp  antom.h  antombase.cpp  bucket.cpp  bucket.h  cascade.cpp  circuit.h  main.cpp  multiplecascade.cpp  multiplecascade.h  parser.cpp  parser.h  settings.cpp  settings.h  softclause.h  softclausenodes.h  solverproxy.h  sorter.cpp  timemeasurement.h  totalizerencodetree.h
libs/hqspre-1.4/libs/easylogging/: CMakeLists.txt  easylogging++.cpp
libs/hqspre-1.4/libs/pacose/: CMakeLists.txt
libs/hqspre-1.4/libs/pacose/core/: BoundedQueue.h  Solver.cc  Solver.h  SolverStats.h  SolverTypes.h
libs/hqspre-1.4/libs/pacose/mtl/: Alloc.h  Clone.h  Map.h  Vec.h
libs/hqspre-1.4/libs/pacose/pacose/: Encodings.cc  Encodings.h  Main.cc  MaxSATDimacs.h  Pacose.cc  Pacose.h  Settings.cc  Settings.h  Softclause.h
libs/hqspre-1.4/libs/pacose/simp/: SimpSolver.cc
libs/hqspre-1.4/libs/pacose/utils/: Options.cc  Options.h  ParseUtils.h
libs/hqspre-1.4/src/: CMakeLists.txt  aux.hpp  bool_vector.cpp  bool_vector.hpp  bool_vector.ipp  clause.cpp  clause.hpp  clause.ipp  exceptions.hpp  formula.cpp  formula.hpp  formula.ipp  formula_blocked_et_al.cpp  formula_blocked_et_al.ipp  formula_debug.cpp  formula_dep_elim.cpp  formula_dep_schemes.cpp  formula_elim_set.cpp  formula_equiv_contra.cpp  formula_experimental.cpp  formula_gate_interface.cpp  formula_gates.cpp  formula_inout.cpp  formula_resolution.cpp  formula_sat.cpp  formula_substitute.cpp  formula_subsumption.cpp  formula_subsumption.ipp  formula_unit_pure.cpp  formula_univ_expand.cpp  formula_univ_red.cpp  formula_upla.cpp  formula_vivification.cpp  gate.cpp  gate.hpp  literal.hpp  main.cpp  main_solver.cpp  milp_solver.cpp  milp_solver.hpp  (+13 more)
libs/picosat/: CMakeLists.txt  picosat.c
src/: CMakeLists.txt  DQBDDexceptions.hpp  DQBDDformula.cpp  DQBDDformula.hpp  DQBDDoptions.hpp  DQBDDvariable.cpp  DQBDDvariable.hpp  DQDIMACSparser.cpp  DQDIMACSparser.hpp  HQSpreinterface.cpp  HQSpreinterface.hpp  Makefile  dqbddexceptions.hpp  dqbddformula.cpp  dqbddformula.hpp  dqbddoptions.hpp  dqbddvariable.cpp  dqbddvariable.hpp  dqdimacsparser.cpp  dqdimacsparser.hpp  formula.cpp  formula.hpp  gateparser.cpp  gateparser.hpp  hqspreinterface.cpp  hqspreinterface.hpp  hqspresimple.cpp  main.cpp  parser.hpp  prenexcleansedqcirparser.cpp  prenexcleansedqcirparser.hpp  prenexdqcirparser.cpp  prenexdqcirparser.hpp  quantifiedvariablesmanipulator.cpp  quantifiedvariablesmanipulator.hpp  quantifiertree.cpp  quantifiertree.hpp  quantifiertreeconnection.cpp  quantifiertreeformula.cpp  quantifiertreenode.cpp  (+9 more)
