# Create the aigpp library
add_library(cudd STATIC
        cplusplus/cuddObj.cc
        cplusplus/cuddObj.hh
        cudd/cuddAddAbs.c
        cudd/cuddAddApply.c
        cudd/cuddAddFind.c
        cudd/cuddAddInv.c
        cudd/cuddAddIte.c
        cudd/cuddAddNeg.c
        cudd/cuddAddWalsh.c
        cudd/cuddAndAbs.c
        cudd/cuddAnneal.c
        cudd/cuddApa.c
        cudd/cuddAPI.c
        cudd/cuddApprox.c
        cudd/cuddBddAbs.c
        cudd/cuddBddCorr.c
        cudd/cuddBddIte.c
        cudd/cuddBridge.c
        cudd/cuddCache.c
        cudd/cuddCheck.c
        cudd/cuddClip.c
        cudd/cuddCof.c
        cudd/cuddCompose.c
        cudd/cuddDecomp.c
        cudd/cuddEssent.c
        cudd/cuddExact.c
        cudd/cuddExport.c
        cudd/cuddGenCof.c
        cudd/cuddGenetic.c
        cudd/cuddGroup.c
        cudd/cuddHarwell.c
        cudd/cuddInit.c
        cudd/cuddInteract.c
        cudd/cuddLCache.c
        cudd/cuddLevelQ.c
        cudd/cuddLinear.c
        cudd/cuddLiteral.c
        cudd/cuddMatMult.c
        cudd/cuddPriority.c
        cudd/cuddRead.c
        cudd/cuddRef.c
        cudd/cuddReorder.c
        cudd/cuddSat.c
        cudd/cuddSign.c
        cudd/cuddSolve.c
        cudd/cuddSplit.c
        cudd/cuddSubsetHB.c
        cudd/cuddSubsetSP.c
        cudd/cuddSymmetry.c
        cudd/cuddTable.c
        cudd/cuddUtil.c
        cudd/cuddWindow.c
        cudd/cuddZddCount.c
        cudd/cuddZddFuncs.c
        cudd/cuddZddGroup.c
        cudd/cuddZddIsop.c
        cudd/cuddZddLin.c
        cudd/cuddZddMisc.c
        cudd/cuddZddPort.c
        cudd/cuddZddReord.c
        cudd/cuddZddSetop.c
        cudd/cuddZddSymm.c
        cudd/cuddZddUtil.c
        dddmp/dddmpBinary.c
        dddmp/dddmpConvert.c
        dddmp/dddmpDbg.c
        dddmp/dddmpLoad.c
        dddmp/dddmpLoadCnf.c
        dddmp/dddmpNodeAdd.c
        dddmp/dddmpNodeBdd.c
        dddmp/dddmpNodeCnf.c
        dddmp/dddmpStoreAdd.c
        dddmp/dddmpStoreBdd.c
        dddmp/dddmpStoreCnf.c
        dddmp/dddmpStoreMisc.c
        dddmp/dddmpUtil.c
        epd/epd.c
        mtr/mtrBasic.c
        mtr/mtrGroup.c
        st/st.c
        util/cpu_stats.c
        util/cpu_time.c
        util/cstringstream.c
        util/datalimit.c
        util/pathsearch.c
        util/pipefork.c
        util/prtime.c
        util/safe_mem.c
        util/strsav.c
        util/texpand.c
        util/ucbqsort.c
        cudd/cudd.h
        cudd/cuddInt.h
        dddmp/dddmp.h
        dddmp/dddmpInt.h
        epd/epd.h
        epd/epdInt.h
        mtr/mtr.h
        mtr/mtrInt.h
        nanotrav/bnet.h
        nanotrav/ntr.h
        st/st.h
        util/cstringstream.h
        util/util.h
    )
target_include_directories(cudd PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/cudd"
                                       "${CMAKE_CURRENT_SOURCE_DIR}/st"
                                       "${CMAKE_CURRENT_SOURCE_DIR}/mtr"
                                       "${CMAKE_CURRENT_SOURCE_DIR}/epd"
                                       "${CMAKE_CURRENT_SOURCE_DIR}/util"
                                       "${CMAKE_CURRENT_SOURCE_DIR}/cplusplus"
                                       "${CMAKE_CURRENT_BINARY_DIR}")

install(TARGETS cudd
        RUNTIME DESTINATION ${CMAKE_BINARY_DIR}/bin
        LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/bin
        ARCHIVE DESTINATION ${CMAKE_BINARY_DIR}/bin
       )
